--- a/CS-II/style.css
+++ b/CS-II/style.css
@@ -1,38 +1,74 @@
-.dropbtn {
-    color: maroon;
-    padding: 16px;
-    font-size: 2em;
-    border: none;
-    cursor: pointer;
-}
 
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    min-width: 160px;
-    padding: 12px 16px;
-    z-index: 1;
-}
-
-.dropdown:hover .dropdown-content{
-    display: block;
-
-}
-.dropdown-content a {
-    color: maroon;
-    padding: 12px 16px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Ariel, Helvetica, sans-serif;
+  
     text-decoration: none;
-
+}
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: white;
+    box-shadow: 0 5px 10px rgb(0,0,0,.1);
+    padding: 0px 7%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1000;
+}
+header .logo {
+    font-weight: bolder;
+    font-size: 25px;
+    color: coral;
+}
+	      
+header .navbar ul{
+    list-style: none;
+}
+header .navbar ul li{
+    position: relative;
+    float: left;
+}
+header .navbar ul li a{
+    font-size: 20px;
+    padding: 20px;
+    color: coral;
     display: block;
 }
 
+header .navbar ul li a:hover{
+    background: pink;
+    color: maroon;
+}
 
-      .p1 {
+header .navbar ul li ul{
+    position: absolute;
+    left: 0;
+    width: 200px;
+    background: pink;
+    display: none;
+}
+
+header .navbar ul li ul li{
+    width: 100%;
+    border-top: 1px solid salmon;
+}
+
+header .navbar ul li ul li ul{
+    left: 200px;
+    top:0;
+}
+
+ header .navbar ul li:hover > ul{
+     display: initial;
+ }
+
+
+.p1 {
 	  font-family: "Lucida Console", "Courier New", monospace;
 	  font-size: 2em;
 	  text-align: center;
@@ -55,40 +91,72 @@
 	   text-align: center;
 	   color: black;
 	   border-style: solid;
-	   margin-top: 15%;
+	  	   
 	   border: 1px solid;
 	   padding: 10px;
 	   box-shadow:5px 10px 40px lightcoral inset;
 	 }
-
-      ul {list-style-type: none;
-	  margin: 0;
-	  padding: 0;
-	  overflow: hidden;
-	 
-	 }
-      li {float:left;
-	  border-right:1px solid peachpuff;
-	  font-size: 2em;
-	 }
-      li:last-child{
-	  border-right: none;
-      }
-      li a {display: block;
-	    color: brown;
-	    text-align: center;
-	    padding: 14px 16px;
-	    text-decoration: none;
-	   }
-      li a:hover:not(.active){
-	  background-color: mistyrose;
-      }
-      
+           
       body {  
 	   
        background-image: linear-gradient(45deg, beige, rgb(255,122,89));
 	    
 	  }
-      .active{ background-color: darksalmon;
+    
+      ok { margin: 0;
+	     padding: 0;
+	     display: flex;
+	     align-items: center;
+	    
+	     justify-content: center;
+	     min-height:50vh;
+	     
+	     font-family: monospace;
+	   }
+      .container{ position: relative;
+		  perspective: 20000px;
+		  		 
+		  animation: rotate 4s ease-in infinite;
+		  
+		}
+      .text {
+	  color: deeppink;
+	  font-size: 50px;
+	  margin-left: -200px;
+	  padding-right: 5px;
+	  font-weight: bolder;
+      }
+      .container div{
+	  position: absolute;
+	  color: deeppink;
+	  height: 40px;
+	  width: 200px;
+	  padding: 10px 30px;
+	  margin: -30px 0;
+	  text-align:center;
+	  font-size: 40px;
+	
+      }
+       
+	  
+      
+      .container div:nth-child(3){
+	  transform: rotateX(180deg) translateZ(30px);
+	  background-color: lightgreen;
+
+      }
+     
+      
+      @keyframes rotate {
+	  0%{ transform:rotateX(0deg);
 	     }
-   
+	  25%{
+	      transform:rotateX(90deg);
+	  }
+	  50%{ transform:rotateX(180deg);
+	     }
+			 
+	  75%{ transform:rotateX(270deg);
+	     }
+	  100%{ transform:rotateX(360deg);
+	      }
