--- a/CS-II/style.css
+++ b/CS-II/style.css
@@ -87,7 +87,7 @@ header .navbar ul li ul li ul{
 	    text-align: center;
 	  }
 
-      h1 { text-shadow: 0 0 7px deeppink;
+      h1{ text-shadow: 0 0 7px deeppink;
 	   text-align: center;
 	   color: black;
 	   border-style: solid;
@@ -103,7 +103,7 @@ header .navbar ul li ul li ul{
 	    
 	  }
     
-      ok { margin: 0;
+      body1{ margin: 0;
 	     padding: 0;
 	     display: flex;
 	     align-items: center;
@@ -135,7 +135,7 @@ header .navbar ul li ul li ul{
 	  margin: -30px 0;
 	  text-align:center;
 	  font-size: 40px;
-	
+	  font-weight:bolder;	
       }
        
 	  
