--- a/CS-II/style.css
+++ b/CS-II/style.css
@@ -86,7 +86,17 @@ header .navbar ul li ul li ul{
 	    box-shadow: 10px 10px 50px lightcoral inset;
 	    text-align: center;
 	  }
-
+      .p3 {
+	  font-family: "Lucida Console", "Courier New", monospace;
+	  font-size: 2em;
+	  margin-top: 8%;
+	  padding: 10px;
+	 
+	  border-style: solid;
+	  border: 1px solid;
+	  box-shadow: 10px 10px 50px lightcoral inset;
+	  text-align: center;
+      }
       h1{ text-shadow: 0 0 7px deeppink;
 	   text-align: center;
 	   color: black;
