--- a/CS-II/style.css
+++ b/CS-II/style.css
@@ -23,7 +23,7 @@ header {
 header .logo {
     font-weight: bolder;
     font-size: 25px;
-    color: coral;
+    color: rgb(217, 166, 195);
 }
 	      
 header .navbar ul{
@@ -170,3 +170,4 @@ header .navbar ul li ul li ul{
 	     }
 	  100%{ transform:rotateX(360deg);
 	      }
+		}
