--- a/CS-II/style.css
+++ b/CS-II/style.css
@@ -36,7 +36,7 @@ header .navbar ul li{
 header .navbar ul li a{
     font-size: 20px;
     padding: 20px;
-    color: coral;
+    color: pink;
     display: block;
 }
 
