--- a/CS-II/style.css
+++ b/CS-II/style.css
@@ -83,7 +83,7 @@ header .navbar ul li ul li ul{
 	    background-color: beige;
 	    border-style: solid;
 	    border: 1px solid;
-	    box-shadow: 10px 10px 50px lightcoral inset;
+	    box-shadow: 10px 10px 50px #e8d498 inset;
 	    text-align: center;
 	  }
       .p3 {
