--- a/CS-II/style.css
+++ b/CS-II/style.css
@@ -12,7 +12,7 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    background: white;
+    background: rgb(248, 167, 205);
     box-shadow: 0 5px 10px rgb(0,0,0,.1);
     padding: 0px 7%;
     display: flex;
@@ -55,7 +55,7 @@ header .navbar ul li ul{
 
 header .navbar ul li ul li{
     width: 100%;
-    border-top: 1px solid salmon;
+    border-top: 1px solid rgb(229, 223, 172);
 }
 
 header .navbar ul li ul li ul{
